--- a/03_전승민_리시버/리시버.md
+++ b/03_전승민_리시버/리시버.md
@@ -1,67 +1,73 @@
-> 리시버란?
+# 리시버
 
-- 4대 컴포넌트 중 하나이다.
-- - 액티비티
-  - 리시버
-  - 프로바이더
-  - 서비스
+## 리시버란?
 
-- 각종 앱에서 발생하는 이벤트를 수신해 리시버로 처리하는 것.
-- 이벤트->처리가 하나의 사이클
-- 1:多 관계가 될 수 있음.
+### 4대 컴포넌트 중 하나이다.
 
-> 리시버의 종류
+* 액티비티
+* 리시버
+* 프로바이더
+* 서비스
 
-- 정적 리시버
-- - Manifest에 한번 등록되면 해제할 수 없음.
-  - 앱이 설치될 때 자동으로 등록됨.
+### 각종 앱에서 발생하는 이벤트를 수신해 리시버로 처리하는 것.
 
-- 동적 리시버
-- - 등록과 해제가 자유로움
-  - Manifest에 등록하지 않고 소스상에 등록함.
-  - 해당 컴포넌트의 생명 주기의 영향.
+### 이벤트->처리가 하나의 사이클
 
-> > 정적 리시버
+### 1:多 관계가 될 수 있음.
 
-1. BroadCastReceiver를 상속받아 onReceiver()메소드 오버라이딩하기.
+## 리시버의 종류
 
+### 정적 리시버
+
+* Manifest에 한번 등록되면 해제할 수 없음.
+* 앱이 설치될 때 자동으로 등록됨.
+
+### 동적 리시버
+
+* 등록과 해제가 자유로움
+* Manifest에 등록하지 않고 소스상에 등록함.
+* 해당 컴포넌트의 생명 주기의 영향.
+
+## 정적 리시버
+
+* BroadCastReceiver를 상속받아 onReceiver()메소드 오버라이딩하기.
+
+``` java
    public class BroadCastTest extends BroadcastReceiver{
-
-   ​	@Override
-
-   ​	public void onReceive(Context context, Intent intent){
-
-   ​		//리시버에서 처리할 내용
-
-   ​	}
+   ​    @Override
+   ​    public void onReceive(Context context, Intent intent){
+   ​        //리시버에서 처리할 내용
+   ​    }
 
    }
+```
 
-2. Manifest에 BroadCastReceiver 등록하기.
+* Manifest에 BroadCastReceiver 등록하기.
 
+``` xml
    <receiver android:name=".BroadCastTest"> // BroadCastReceiver를 상속받은 클래스 이름
+```
 
-3. Intent-filter를 통해 intent 걸러내기.
+* Intent-filter를 통해 intent 걸러내기.
 
+``` xml
    <intent-filter>
-
-   ​	<action android:name="/*처리할 내용*/">
-
+       <action android:name="/*처리할 내용*/">
    </intent-filter>
+```
 
-- action 목록
+### action 목록
 
-...\Android\android-sdk\platforms\android-10\data\broadcast_actions.txt
-https://chromium.googlesource.com/android_tools/+/febed84a3a3cb7c2cb80d580d79c31e22e9643a5/sdk/platforms/android-23/data/broadcast_actions.txt>
+* Android\android-sdk\platforms\android-10\data\broadcast_actions.txt
+* [Link](https://chromium.googlesource.com/android_tools/+/febed84a3a3cb7c2cb80d580d79c31e22e9643a5/sdk/platforms/android-23/data/broadcast_actions.txt)
 
-> > 동적 리시버
+## 동적 리시버
 
 1. Receiver Class 생성.          // 정적 리시버. 1번과 같음.
-
 2. Receiver Class 객체 생성. // 1번의 객체를 생성(변수명: receiver)
+3. Intent-filter 등록 (registerReceiver()).  
 
-3. Intent-filter 등록.(registerReceiver()).  
-
+``` java
    protected void onCreate(){
 
    ...
@@ -73,9 +79,11 @@ https://chromium.googlesource.com/android_tools/+/febed84a3a3cb7c2cb80d580d79c31
    ...
 
    }
+```
 
-4. 등록한 브로드캐스트를 종료.(unregisterReceiver()).
+4. 등록한 브로드캐스트를 종료 (unregisterReceiver()).
 
+```java
    protected void onDestroy()
 
    {
@@ -87,5 +95,6 @@ https://chromium.googlesource.com/android_tools/+/febed84a3a3cb7c2cb80d580d79c31
    ...
 
    }
+```
 
-3번과 4번에서, 브로드캐스트를 등록/종료하는 것은 Activity의 라이프사이클에 맞추어 등록/종료해야함.
+* 3번과 4번에서, 브로드캐스트를 등록/종료하는 것은 Activity의 라이프사이클에 맞추어 등록/종료해야함.
